# SPH-EXA-nnet

./: .gitignore  CMakeLists.txt  README.md  eigen-tests.cpp  net14-constants.hpp  net14-test.cpp  net14.hpp  nuclear-net-mockup.hpp  nuclear-net-test-2.cpp  nuclear-net-test.cpp  nuclear-net.hpp
.scripts/: clang_format.sh
include/: CMakeLists.txt  nuclear-net.cpp  nuclear-net.cu  nuclear_net.cpp  nuclear_net.cu
include/nnet/: nuclear-net.cuh  nuclear-net.hpp  nuclear_net.hpp
include/nnet-util/CUDA/: cuda.inl
include/nnet/CUDA/: cuda-util.hpp  cuda.inl  nuclear-net.cuh  nuclear-net.hpp  nuclear_net.cuh
include/nnet/eigen/: eigen.hpp
include/nnet/eos/: helmholtz.cuh  helmholtz.hpp  ideal_gas.hpp
include/nnet/net14/: net14-constants.cuh  net14-constants.hpp  net14.cuh  net14.hpp
include/nnet/net86/: net86-constants.cuh  net86-constants.hpp  net86.cuh  net86.hpp
include/nnet/net87/: CMakeLists.txt  electrons.cu  electrons.cuh  electrons.hpp  net87.cuh  net87.hpp
include/nnet/parallel/: CMakeLists.txt  parallel-nuclear-net.hpp  parallel_nuclear_net.hpp
include/nnet/parallel/CUDA/: parallel-nuclear-net.cu  parallel-nuclear-net.cuh  parallel_nuclear_net.cu  parallel_nuclear_net.cuh
include/nnet/parallel/implementation/: parallel_nuclear_net_impl.cpp  parallel_nuclear_net_impl.hpp
include/nnet/parameterization/eos/: helmholtz.cpp  helmholtz.hpp  ideal_gas.hpp
include/nnet/parameterization/net14/: net14-constants.hpp  net14.cpp  net14.hpp  net14_constants.hpp  net14_tables.hpp
include/nnet/parameterization/net86/: net86-constants.hpp  net86.cpp  net86.hpp  net86_constants.hpp  net86_tables.hpp
include/nnet/parameterization/net87/: electrons.hpp  net87.cpp  net87.hpp
include/nnet/sphexa/: initializers.hpp  nuclear-data.hpp  nuclear-io.hpp  nuclear-net.hpp  observables.hpp
include/nnet/sphexa/CUDA/: CMakeLists.txt  nuclear-data-gpu.cu  nuclear-data-gpu.cuh  nuclear-data-stubs.hpp  nuclear-net.cu  nuclear-net.cuh
include/nnet/sphexa/mpi/: mpi-wrapper.hpp
include/nnet/sphexa/util/: algorithm.hpp
include/nnet_util/: algorithm.hpp  eigen.hpp
include/nnet_util/CUDA/: cuda-util.hpp
include/util/: algorithm.hpp
scripts/: clang_format.sh
sphexa/: mpi-wrapper.hpp  nuclear-data.hpp  nuclear-net.hpp
sphexa/src/: mpi-wrapper.hpp  nuclear-data.hpp  nuclear-net.hpp
sphexa/src/utils/: algorithm.hpp
sphexa/test/: hydro-mockup.cpp  mpi-wrapper-test.cpp  nuclear-data-test.cpp  parallel-nuclear-data-test.cpp
src/: CMakeLists.txt  eigen.hpp  nuclear-net.hpp
src/CUDA/: cuda-util.hpp  cuda.inl  nuclear-net.hpp
src/EOS/: helmholtz.hpp
src/eigen/: batchSolver.hpp  cudaSolver.hpp  eigen.hpp
src/eigen/CUDA/: cuda-eigen.hpp
src/eos/: helmholtz.hpp  ideal_gas.hpp
src/eos/CUDA/: copy-to-gpu.hpp
src/net14/: net14-constants.hpp  net14.hpp
src/net86/: electrons.hpp  net86-constants.hpp  net86.hpp
src/net87/: electrons.hpp  net87-constants.hpp  net87.hpp
src/sphexa/: file_utils.hpp  initializers.hpp  mpi-wrapper.hpp  nuclear-data.hpp  nuclear-io.hpp  nuclear-net.hpp  observables.hpp
src/sphexa/CUDA/: CMakeLists.txt  nuclear-data-gpu.cu  nuclear-data-gpu.cuh  nuclear-data-gpu.hpp  nuclear-net.cu  nuclear-net.cu.cuh  nuclear-net.cuh  nuclear-net.cuh.not_used
src/sphexa/io/: file_writer.hpp
src/sphexa/mpi/: mpi-wrapper.hpp
src/sphexa/util/: algorithm.hpp  data_util.hpp
src/sphexa/utils/: algorithm.hpp  data_utils.hpp
test/: !  CMakeLists.txt  Makefile  add_test.cu  eigen_test.cpp  error  hydro-mockup-cuda.cpp  hydro-mockup.cpp  hydro-mockup.cu  net14-C-O-test.cpp  net14-He-test.cpp  net14-Si-test.cpp  net14-hydro-mockup.cpp  net14-hydro-mockup.cu  net14-superstepping-C-O-test.cpp  net14-test.cpp  net14_rate_test.cpp  net14_test.cpp  net86_rate_test.cpp  net86_test.cpp  net87_rate_test.cpp  nuclear-net-test.cpp  parallel-perftest.cpp
test/CUDA/: CMakeLists.txt
test/cuda_minimum_test/: add.cpp  add.hpp
test/eos/: helmholtz_check.cpp
test/net14/: C-O-test.cpp  He-test.cpp  Si-test.cpp  rate_test.cpp  substepping-C-O-test.cpp  superstepping-C-O-test.cpp
test/net14/results/C-O-test/: res
test/net14/results/He-test/: res.csv
test/net14/results/Si-test/: res  res.csv
test/net86/: C-O-test.cpp  He-test.cpp  Makefile  net86.cpp  rate_test.cpp
test/net87/: net87.cpp
test/results/: res  res.csv
test/results/C-O-superstepping-test/: res  res.csv
test/results/C-O-test/: res  res.csv
test/results/He-test/: res  res.csv
test/results/Si-test/: res  res.csv
test/sphexa/: Makefile  hydro-mockup.cpp  mpi-wrapper-test.cpp  net86-nuclear-data-test.cpp  net86-nuclear-data.cpp  nuclear-data-test.cpp  nuclear-io-test.cpp  parallel-nuclear-data-test.cpp
test/sphexa/utils/: sphexa_utils.hpp
test/util/: arg_parser.hpp  sphexa_utils.hpp
test/util/domain/include/cstone/cuda/: cuda_stubs.h
test/util/domain/include/cstone/fields/: concatenate.hpp  field_states.hpp
test/util/domain/include/cstone/util/: array.hpp  reallocate.cu  reallocate.hpp  util.hpp
test/util/sph/include/sph/: data_util.hpp  field_states.hpp  traits.hpp
